:heavy_check_mark: Сборка #9

--- a/9/styles/styles.css
+++ b/9/styles/styles.css
@@ -48,30 +48,37 @@ body {
   flex-direction: column;
   background-color: #ffffff;
   box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.2);
-}
 
-.main-container {
-  flex-grow: 1;
 }
 
 .page-header {
+  margin-top: 0;
   padding: 0 70px;
 }
 
 .navigation {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  margin-bottom: 0;
+  margin-top: 0;
+  position: relative;
+  z-index: 1;
+}
+
+.navigation-logo {
+  margin-right: 28px;
 }
 
 .logo {
   display: block;
   width: 140px;
-  margin-right: 28px;
+  height: auto;
   margin-bottom: -6px;
+  object-fit: contain;
 }
 
 .navigation-list {
+  max-width: 648px;
   display: flex;
   flex-wrap: wrap;
   margin: 0;
@@ -88,10 +95,24 @@ body {
   color: #000000;
   background-color: #ffffff;
   text-decoration: none;
-  padding: 20px 16px;
+  padding: 19px 16px;
+  position: relative;
+  margin-top: 1px;
+}
+
+.navigation-link-current::after {
+  position: absolute;
+  content: "";
+  right: 16px;
+  bottom: -1px;
+  left: 16px;
+  height: 2px;
+  background-color: #595959;
+
 }
 
 .user-list {
+  width: 280px;
   display: flex;
   flex-wrap: wrap;
   margin: 0;
@@ -115,7 +136,7 @@ body {
   text-decoration: none;
   padding: 22px 12px;
   box-sizing: border-box;
-  outline: 1px solid #5582a0;
+  /*outline: 1px solid #5582a0;*/
 }
 
 .user-link-search {
@@ -130,6 +151,7 @@ body {
   background-size: 20px 20px;
   background-repeat: no-repeat;
   background-position: center;
+  position: relative;
 }
 
 .user-favorites-num {
@@ -140,12 +162,18 @@ body {
   background-color: #7db54f;
   border-radius: 50%;
   margin: 0;
-  padding: 4px 5px;
+  padding: 5px 5px 5px 4px;
+  position: absolute;
+  content: "";
+  display: block;
+  top: 11px;
+  right: 4px;
 }
 
 .user-button {
   width: 160px;
   display: block;
+  box-sizing: border-box;
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
@@ -155,16 +183,30 @@ body {
   border-radius: 4px;
   text-decoration: none;
   text-align: center;
-  padding: 8px 0;
+  padding: 8px 8px;
+}
+
+.user-button:hover {
+  background-color: #615048;
+}
+
+.user-button:active {
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #756157;
+}
+
+.main-container {
+  flex-grow: 1;
 }
 
 .hero {
   background-image: url("../images/hero/index-background.jpg");
-  background-size: cover;
   background-repeat: no-repeat;
   color: #ffffff;
   background-color: #5582a0;
   text-align: center;
+  object-fit: contain;
+  position: relative;
 }
 
 .hero-title {
@@ -174,6 +216,16 @@ body {
   margin: 0 auto;
   padding-top: 51px;
   padding-bottom: 82px;
+}
+
+.hero::after {
+  background-image: url("../images/hero/divider.svg");
+  width: 1200px;
+  height: 57px;
+  position: absolute;
+  content: "";
+  left: 0;
+  bottom: 0;
 }
 
 .advantages {
@@ -218,6 +270,13 @@ body {
   margin: 0 0 30px 0;
 }
 
+.advantages-line {
+  width: 60px;
+  height: 2px;
+  background-color: rgba(0, 0, 0, 0.3);
+  margin: 0 0 30px 0;
+}
+
 .advantages-description {
   font-weight: 400;
   font-size: 18px;
@@ -245,6 +304,7 @@ body {
   min-height: 385px;
   padding: 0 85px;
   box-sizing: border-box;
+  align-items: center;
 }
 
 .advantage-image {
@@ -291,6 +351,36 @@ body {
   margin: 0;
 }
 
+.services-housing {
+  width: 72px;
+  height: 75px;
+  display: block;
+  background-image: url("../images/services/housing.svg");
+  background-repeat: no-repeat;
+  background-position: top center;
+  margin: 0 0 30px 0;
+}
+
+.services-food {
+  width: 72px;
+  height: 75px;
+  display: block;
+  background-image: url("../images/services/food.svg");
+  background-repeat: no-repeat;
+  background-position: top center;
+  margin: 0 0 30px 0;
+}
+
+.services-souvenirs {
+  width: 72px;
+  height: 75px;
+  display: block;
+  background-image: url("../images/services/souvenirs.svg");
+  background-repeat: no-repeat;
+  background-position: top center;
+  margin: 0 0 30px 0;
+}
+
 .color-basic {
   background-color: #82b3d3;
   color: #ffffff;
@@ -298,6 +388,10 @@ body {
 
 .color-basic .advantages-heading {
   color: #ffffff;
+}
+
+.color-basic .advantages-line {
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .color-light {
@@ -355,6 +449,15 @@ body {
   text-align: center;
   margin: 0 auto;
   cursor: pointer;
+}
+
+.interested-button:hover {
+  background-color: #615048;
+}
+
+.interested-button:active {
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #756157;
 }
 
 .subscribe {
@@ -424,6 +527,15 @@ body {
   cursor: pointer;
 }
 
+.subscribe-button:hover {
+  background-color: #68a2ca;
+}
+
+.subscribe-button:active {
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #82b3d3;
+}
+
 .page-footer {
   padding: 40px 70px 30px 70px;
   display: flex;
@@ -442,7 +554,6 @@ body {
   width: 48px;
   height: 40px;
   cursor: pointer;
-  outline: 1px solid #5582a0;
 }
 
 .socials-link {
@@ -472,10 +583,6 @@ body {
   fill: rgba(104, 162, 202, 0.3);
 }
 
-.socials-icon:focus {
-  fill: #68a2ca;
-}
-
 .socials-link-vk {
   top: 13px;
   left: 12px;
@@ -501,6 +608,14 @@ body {
   text-decoration: none;
 }
 
+.phone:hover {
+  color: #756157;
+}
+
+.phone:active {
+  color: rgba(117, 97, 87, 0.3);
+}
+
 .copyright-link {
   position: relative;
   font-weight: 400;
@@ -513,7 +628,6 @@ body {
   height: 33px;
   align-self: center;
   display: block;
-  outline: 1px solid #5582a0;
 }
 
 .copyright-logo {
@@ -529,10 +643,6 @@ body {
 
 .copyright-logo:active {
   fill: rgba(117, 97, 87, 0.3);
-}
-
-.copyright-logo:focus {
-  fill: #756157;
 }
 
 .catalog-header {
@@ -555,6 +665,7 @@ body {
 
 .breadcrumbs {
   display: flex;
+  flex-wrap: wrap;
   font-weight: 400;
   font-size: 16px;
   line-height: 21px;
@@ -562,12 +673,40 @@ body {
   padding: 0;
   list-style: none;
   margin-bottom: 40px;
+  align-items: center;
 }
 
 .breadcrumbs-link {
   color: #ffffff;
   text-decoration: none;
 }
+
+.breadcrumbs-link-home {
+  width: 12px;
+  height: 12px;
+  display: block;
+  box-sizing: border-box;
+  background-image: url("../images/breadcrumbs/home.svg");
+  background-repeat: repeat;
+  background-size: cover;
+  margin-right: 10px;
+}
+
+.breadcrumbs-link-hotels {
+  padding-left: 18px;
+  background-image: url("../images/breadcrumbs/arrow.svg");
+  background-repeat: no-repeat;
+  background-size: 8px auto;
+  background-position: start center;
+}
+
+.breadcrumbs-link-hotels:hover {
+  color: rgba(255, 255, 255, 0.6);
+}
+.breadcrumbs-link-hotels:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
 
 .catalog-filter {
   margin: auto;
@@ -657,7 +796,7 @@ body {
   border-radius: 4px;
   text-transform: uppercase;
   text-align: center;
-  padding: 8px 0;
+  padding: 8px 8px;
   cursor: pointer;
 }
 
@@ -666,8 +805,25 @@ body {
   margin-bottom: 32px;
 }
 
+.apply:hover {
+  background-color: #68a2ca;
+}
+
+.apply:active {
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #82b3d3;
+}
+
 .reset {
   background-color: transparent;
+}
+
+.reset:hover {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.reset:active {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .catalog-products {
@@ -683,7 +839,6 @@ body {
 
 .sorting .subtitle {
   width: 468px;
-  /*align-self: center; Проверить,как будет выравниваться при ппереполнении. Нужен ли padding-top: 7px;?*/
   padding-top: 7px;
 }
 
@@ -693,13 +848,27 @@ body {
   font-size: 18px;
   line-height: 21px;
   color: #333333;
-  padding: 10px 14px;
+  padding: 12px 20px;
+  padding-right: 40px;
   width: 292px;
   height: 48px;
   box-sizing: border-box;
   border: 2px solid #e5e5e5;
   border-radius: 4px;
   cursor: pointer;
+  appearance: none;
+  background-image: url("../images/products/down-arrow.svg");
+  background-repeat: no-repeat;
+  background-position: right 20px center;
+}
+
+.select-control:hover {
+  border-color: #68a2ca;
+}
+
+.select-control:active {
+  border-color: #3f5e72;
+  outline: none;
 }
 
 .button-show-list{
@@ -728,9 +897,36 @@ body {
   cursor: pointer;
 }
 
-.button-show-active {
-  border: 2px solid #000000;
+.button-show:hover {
+  border-color: #000000;
 }
+
+.button-show:focus {
+  border-color: #68a2ca;
+}
+
+.button-show:active {
+  border-color: #000000;
+}
+
+.button-show-tiles {
+  background-image: url("../images/products/tiles.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.button-show-slides {
+  background-image: url("../images/products/slides.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.button-show-enumeration {
+  background-image: url("../images/products/list.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
 
 .product-list {
   display: grid;
@@ -766,7 +962,6 @@ body {
   color: #000000;
   padding: 0;
   margin: 0;
-
 }
 
 .product-image-link {
@@ -805,6 +1000,15 @@ body {
   padding: 8px;
 }
 
+.product-more:hover {
+  background-color: #615048;
+}
+
+.product-more:active {
+  color: rgba(255, 255, 255, 0.3);
+  background-color: 756157;
+}
+
 .product-to-favorites {
   display: inline-block;
   font-family: inherit;
@@ -818,6 +1022,15 @@ body {
   text-transform: uppercase;
   padding: 8px;
   cursor: pointer;
+}
+
+.product-to-favorites:hover {
+  background-color: #68a2ca;
+}
+
+.product-to-favorites:active {
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #82b3d3;
 }
 
 .product-in-favorites {
@@ -835,6 +1048,15 @@ body {
   cursor: pointer;
 }
 
+.product-in-favorites:hover {
+  background-color: #6C9E42;
+}
+
+.product-in-favorites:active {
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #7db54f;
+}
+
 .product-rating {
   font-weight: 400;
   font-size: 16px;
@@ -846,8 +1068,17 @@ body {
   text-align: center;
 }
 
-.stars {
+.product-starsbox {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px 0;
+}
 
+.product-star {
+  width: 18px;
+  background-image: url("../images/products/star.svg");
+  background-repeat: no-repeat;
+  padding: 10px 6px 10px 0;
 }
 
 .pagination {
@@ -879,6 +1110,15 @@ body {
   border-radius: 4px;
 }
 
+.pagination-link:hover {
+  background-color: #68a2ca;
+}
+
+.pagination-link:active {
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #82b3d3;
+}
+
 .pagination-ellipsis {
   display: block;
   box-sizing: border-box;
@@ -891,6 +1131,16 @@ body {
 }
 
 .pagination-current {
+  color: #000000;
+  background-color: #f2f2f2;
+}
+
+.pagination-current:hover {
+  color: #000000;
+  background-color: #f2f2f2;
+}
+
+.pagination-current:active {
   color: #000000;
   background-color: #f2f2f2;
 }
