--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,7 +48,6 @@ body {
   flex-direction: column;
   background-color: #ffffff;
   box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.2);
-
 }
 
 .page-header {
@@ -77,6 +76,18 @@ body {
   object-fit: contain;
 }
 
+.logo-inner:hover {
+  opacity: 0.6;
+}
+
+.logo-inner:focus-visible {
+  opacity: 0.6;
+}
+
+.logo-inner:active {
+  opacity: 0.3;
+}
+
 .navigation-list {
   max-width: 648px;
   display: flex;
@@ -95,10 +106,23 @@ body {
   color: #000000;
   background-color: #ffffff;
   text-decoration: none;
-  padding: 19px 16px;
+  padding: 19px 14px 19px 16px;
   position: relative;
   margin-top: 1px;
+  margin-right: 2px;
 }
+
+  .navigation-link:hover {
+    opacity: 0.6;
+  }
+
+  .navigation-link:focus-visible {
+    opacity: 0.6;
+  }
+
+  .navigation-link:active {
+    opacity: 0.3;
+  }
 
 .navigation-link-current::after {
   position: absolute;
@@ -107,7 +131,7 @@ body {
   bottom: -1px;
   left: 16px;
   height: 2px;
-  background-color: #595959;
+  background-color: #756257;
 
 }
 
@@ -134,9 +158,18 @@ body {
   color: #000000;
   background-color: #ffffff;
   text-decoration: none;
-  padding: 22px 12px;
+  padding: 22px 10px 22px 12px;
   box-sizing: border-box;
+  margin-right: 2px;
   /*outline: 1px solid #5582a0;*/
+}
+
+.user-link:hover {
+  opacity: 0.6;
+}
+
+.user-link:active {
+  opacity: 0.3;
 }
 
 .user-link-search {
@@ -187,6 +220,10 @@ body {
 }
 
 .user-button:hover {
+  background-color: #615048;
+}
+
+.user-button:focus-visible {
   background-color: #615048;
 }
 
@@ -262,19 +299,24 @@ body {
 }
 
 .advantages-heading {
+  width: 230px;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
   color: #000000;
   text-transform: uppercase;
-  margin: 0 0 30px 0;
+  margin: 0 0 60px 0;
+  position: relative;
 }
 
-.advantages-line {
+.advantages-heading::before {
   width: 60px;
   height: 2px;
   background-color: rgba(0, 0, 0, 0.3);
-  margin: 0 0 30px 0;
+  position: absolute;
+  content: "";
+  left: 85px;
+  bottom: -30px;
 }
 
 .advantages-description {
@@ -336,12 +378,34 @@ body {
  }
 
 .services-heading {
+  width: 230px;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
   color: #000000;
   text-transform: uppercase;
   margin: 0 0 30px 0;
+}
+
+.services-housing {
+  background-image: url("../images/services/housing.svg");
+  background-repeat: no-repeat;
+  background-position: top center;
+  padding-top: 102px;
+}
+
+.services-food {
+  background-image: url("../images/services/food.svg");
+  background-repeat: no-repeat;
+  background-position: top center;
+  padding-top: 102px;
+}
+
+.services-souvenirs {
+  background-image: url("../images/services/souvenirs.svg");
+  background-repeat: no-repeat;
+  background-position: top center;
+  padding-top: 104px;
 }
 
 .services-description {
@@ -351,36 +415,6 @@ body {
   margin: 0;
 }
 
-.services-housing {
-  width: 72px;
-  height: 75px;
-  display: block;
-  background-image: url("../images/services/housing.svg");
-  background-repeat: no-repeat;
-  background-position: top center;
-  margin: 0 0 30px 0;
-}
-
-.services-food {
-  width: 72px;
-  height: 75px;
-  display: block;
-  background-image: url("../images/services/food.svg");
-  background-repeat: no-repeat;
-  background-position: top center;
-  margin: 0 0 30px 0;
-}
-
-.services-souvenirs {
-  width: 72px;
-  height: 75px;
-  display: block;
-  background-image: url("../images/services/souvenirs.svg");
-  background-repeat: no-repeat;
-  background-position: top center;
-  margin: 0 0 30px 0;
-}
-
 .color-basic {
   background-color: #82b3d3;
   color: #ffffff;
@@ -388,6 +422,10 @@ body {
 
 .color-basic .advantages-heading {
   color: #ffffff;
+}
+
+.color-basic .advantages-heading::before {
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .color-basic .advantages-line {
@@ -452,6 +490,10 @@ body {
 }
 
 .interested-button:hover {
+  background-color: #615048;
+}
+
+.interested-button:focus-visible {
   background-color: #615048;
 }
 
@@ -531,6 +573,10 @@ body {
   background-color: #68a2ca;
 }
 
+.subscribe-button:focus-visible {
+  background-color: #68a2ca;
+}
+
 .subscribe-button:active {
   color: rgba(255, 255, 255, 0.3);
   background-color: #82b3d3;
@@ -548,16 +594,10 @@ body {
   margin: 0;
   padding: 0;
   list-style: none;
-}
-
-.socials-item {
-  width: 48px;
-  height: 40px;
-  cursor: pointer;
+  align-self: center;
 }
 
 .socials-link {
-  position: relative;
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
@@ -565,38 +605,61 @@ body {
   background-color: #ffffff;
   text-decoration: none;
   display: block;
+  width: 48px;
+  height: 40px;
   box-sizing: border-box;
+  margin-right: 3px;
 }
 
-.socials-icon {
-  position: absolute;
-  content: "";
-  margin: auto;
-  fill: #83b3d3;
+.socials-vk {
+  padding: 12px 12px 13px 12px;
+  fill: #82b3d3;
 }
 
-.socials-icon:hover {
+.socials-vk:hover {
   fill: #68a2ca;
 }
 
-.socials-icon:active {
+.socials-vk:focus-visible {
+  fill: #68a2ca;
+}
+
+.socials-vk:active {
   fill: rgba(104, 162, 202, 0.3);
 }
 
-.socials-link-vk {
-  top: 13px;
-  left: 12px;
+.socials-telegram {
+  padding: 12px 15px 12px 16px;
+  fill: #82b3d3;
+ }
 
+.socials-telegram:hover {
+  fill: #68a2ca;
 }
 
-.socials-link-telegram {
-  top: 12px;
-  left: 15px;
+.socials-telegram:focus-visible {
+  fill: #68a2ca;
 }
 
-.socials-link-youtube {
-  top: 12px;
-  left: 13px;
+.socials-telegram:active {
+  fill: rgba(104, 162, 202, 0.3);
+}
+
+.socials-youtube {
+  padding: 11px 13px;
+  fill: #82b3d3;
+}
+
+.socials-youtube:hover {
+  fill: #68a2ca;
+}
+
+.socials-youtube:focus-visible {
+  fill: #68a2ca;
+}
+
+.socials-youtube:active {
+  fill: rgba(104, 162, 202, 0.3);
 }
 
 .phone {
@@ -612,32 +675,34 @@ body {
   color: #756157;
 }
 
+.phone:focus-visible {
+  color: #756157;
+}
+
 .phone:active {
   color: rgba(117, 97, 87, 0.3);
 }
 
 .copyright-link {
-  position: relative;
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
   color: #000000;
   background-color: #ffffff;
   text-decoration: none;
-  width: 115px;
-  height: 33px;
-  align-self: center;
-  display: block;
 }
 
 .copyright-logo {
-  position: absolute;
-  content: "";
-  margin: auto;
+  padding: 3px 0 4px 10px;
   fill: #000000;
+  vertical-align: middle;
 }
 
 .copyright-logo:hover {
+  fill: #756157;
+}
+
+.copyright-logo:focus-visible {
   fill: #756157;
 }
 
@@ -697,7 +762,7 @@ body {
   background-image: url("../images/breadcrumbs/arrow.svg");
   background-repeat: no-repeat;
   background-size: 8px auto;
-  background-position: start center;
+  background-position: left center;
 }
 
 .breadcrumbs-link-hotels:hover {
@@ -868,7 +933,6 @@ body {
 
 .select-control:active {
   border-color: #3f5e72;
-  outline: none;
 }
 
 .button-show-list{
@@ -899,10 +963,6 @@ body {
 
 .button-show:hover {
   border-color: #000000;
-}
-
-.button-show:focus {
-  border-color: #68a2ca;
 }
 
 .button-show:active {
