--- a/styles/styles.css
+++ b/styles/styles.css
@@ -298,6 +298,17 @@ body {
   margin: 0;
 }
 
+.description-element {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 400px;
+  min-height: 385px;
+  padding: 10px 85px;
+  box-sizing: border-box;
+  align-items: center;
+}
+
 .advantages-heading {
   width: 230px;
   font-weight: 700;
@@ -338,17 +349,6 @@ body {
   width: 400px;
 }
 
-.description-element {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 400px;
-  min-height: 385px;
-  padding: 0 85px;
-  box-sizing: border-box;
-  align-items: center;
-}
-
 .advantage-image {
   width: 800px;
   height: auto;
@@ -357,6 +357,28 @@ body {
 
 .advantages-item-picture {
   display: flex;
+}
+
+
+.color-basic {
+  background-color: #82b3d3;
+  color: #ffffff;
+}
+
+.color-basic .advantages-heading {
+  color: #ffffff;
+}
+
+.color-basic .advantages-heading::before {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.color-light {
+  background-color: rgba(131, 179, 211, 0.12);
+}
+
+.color-pale {
+  background-color: rgba(131, 179, 211, 0.2);
 }
 
 .services {
@@ -415,30 +437,6 @@ body {
   margin: 0;
 }
 
-.color-basic {
-  background-color: #82b3d3;
-  color: #ffffff;
-}
-
-.color-basic .advantages-heading {
-  color: #ffffff;
-}
-
-.color-basic .advantages-heading::before {
-  background-color: rgba(255, 255, 255, 0.3);
-}
-
-.color-basic .advantages-line {
-  background-color: rgba(255, 255, 255, 0.3);
-}
-
-.color-light {
-  background-color: rgba(131, 179, 211, 0.12);
-}
-
-.color-pale {
-  background-color: rgba(131, 179, 211, 0.2);
-}
 
 .services-list {
   display: flex;
@@ -611,55 +609,31 @@ body {
   margin-right: 3px;
 }
 
+.socials-link:hover svg {
+  fill: #68a2ca;
+}
+
+.socials-link:focus-visible svg {
+  fill: #68a2ca;
+}
+
+.socials-link:active svg {
+  fill: rgba(104, 162, 202, 0.3);
+}
+
 .socials-vk {
   padding: 12px 12px 13px 12px;
   fill: #82b3d3;
 }
 
-.socials-vk:hover {
-  fill: #68a2ca;
-}
-
-.socials-vk:focus-visible {
-  fill: #68a2ca;
-}
-
-.socials-vk:active {
-  fill: rgba(104, 162, 202, 0.3);
-}
-
 .socials-telegram {
   padding: 12px 15px 12px 16px;
   fill: #82b3d3;
- }
-
-.socials-telegram:hover {
-  fill: #68a2ca;
-}
-
-.socials-telegram:focus-visible {
-  fill: #68a2ca;
-}
-
-.socials-telegram:active {
-  fill: rgba(104, 162, 202, 0.3);
 }
 
 .socials-youtube {
   padding: 11px 13px;
   fill: #82b3d3;
-}
-
-.socials-youtube:hover {
-  fill: #68a2ca;
-}
-
-.socials-youtube:focus-visible {
-  fill: #68a2ca;
-}
-
-.socials-youtube:active {
-  fill: rgba(104, 162, 202, 0.3);
 }
 
 .phone {
@@ -692,22 +666,22 @@ body {
   text-decoration: none;
 }
 
+.copyright-link:hover svg {
+  fill: #756157;
+}
+
+.copyright-link:focus-visible svg {
+  fill: #756157;
+}
+
+.copyright-link:active svg {
+  fill: rgba(117, 97, 87, 0.3);
+}
+
 .copyright-logo {
   padding: 3px 0 4px 10px;
   fill: #000000;
   vertical-align: middle;
-}
-
-.copyright-logo:hover {
-  fill: #756157;
-}
-
-.copyright-logo:focus-visible {
-  fill: #756157;
-}
-
-.copyright-logo:active {
-  fill: rgba(117, 97, 87, 0.3);
 }
 
 .catalog-header {
@@ -820,6 +794,8 @@ body {
 }
 
 .cost {
+  display: flex;
+  flex-wrap: wrap;
   min-width: 288px;
 }
 
@@ -849,6 +825,11 @@ body {
   font-size: 18px;
   line-height: 23px;
   background-color: #f2f2f2;
+  appearance: none;
+}
+
+.control-cost {
+  position: relative;
 }
 
 .cost-field {
@@ -860,14 +841,28 @@ body {
   color: #000000;
   padding: 12px 20px;
   border: none;
+
 }
 
-.from {
+.cost-text {
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  color: #000000;
+  position: absolute;
+  top: 12px;
+  right: 20px;
+  opacity: 0.3;
+}
+
+.cost-from {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
+  margin-right: 2px;
 }
 
-.to {
+.cost-to {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
