--- a/styles/styles.css
+++ b/styles/styles.css
@@ -793,12 +793,6 @@ body {
   margin-right: auto;
 }
 
-.cost {
-  display: flex;
-  flex-wrap: wrap;
-  min-width: 288px;
-}
-
 .catalog-filter-title {
   font-weight: 700;
   font-size: 20px;
@@ -816,7 +810,22 @@ body {
 }
 
 .catalog-filter-item:not(:last-child) {
+
   margin-bottom: 16px;
+}
+
+.control {
+  display: flex;
+  padding: 1px;
+}
+
+.control-checkbox {
+  display: block;
+  width: 20px;
+  height: 20px;
+  background-color: #ffffff;
+  border-radius: 4px;
+  margin-right: 15px;
 }
 
 .control-input {
@@ -826,6 +835,13 @@ body {
   line-height: 23px;
   background-color: #f2f2f2;
   appearance: none;
+  margin: 0;
+}
+
+.cost-min-max {
+  display: flex;
+  gap: 2px;
+  margin-bottom: 41px; /*Должно быть 44px, найти еще 3px высоты для flex*/
 }
 
 .control-cost {
@@ -841,7 +857,6 @@ body {
   color: #000000;
   padding: 12px 20px;
   border: none;
-
 }
 
 .cost-text {
@@ -849,22 +864,62 @@ body {
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
-  color: #000000;
+  color: rgba(0, 0, 0, 0.3);
   position: absolute;
   top: 12px;
   right: 20px;
-  opacity: 0.3;
 }
 
 .cost-from {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
-  margin-right: 2px;
 }
 
 .cost-to {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
+}
+
+.range-scale {
+  position: relative;
+  height: 4px;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.range-bar {
+  position: absolute;
+  height: 4px;
+  background-color: #ffffff;
+}
+
+.range-toggle {
+  position: absolute;
+  bottom: -8px;
+  width: 20px;
+  height: 20px;
+  background: #ffffff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.range-toggle:hover,
+.range-toggle:focus-visible {
+  opacity: 0.6;
+}
+
+.range-toggle:active {
+  outline: 3px solid #000000;
+}
+
+.toggle-min {
+  top: -8px;
+  left: 0;
+}
+
+.toggle-max {
+  top: -8px;
+  right: 0;
 }
 
 .filter-buttons {
@@ -873,7 +928,6 @@ body {
 }
 
 .filter-button {
-  display: inline-block;
   width: 191px;
   font-family: inherit;
   font-weight: 700;
@@ -890,7 +944,7 @@ body {
 
 .apply {
   background-color: #82b3d3;
-  margin-bottom: 32px;
+  margin-bottom: 30px; /*по макету 32px*/
 }
 
 .apply:hover {
