--- a/styles/styles.css
+++ b/styles/styles.css
@@ -780,6 +780,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 70px;
+  min-height: 160px;
 }
 
 .catalog-filter-group {
@@ -810,39 +811,79 @@ body {
 }
 
 .catalog-filter-item:not(:last-child) {
-
   margin-bottom: 16px;
 }
 
-.control {
+.control-element {
   display: flex;
-  padding: 1px;
+  gap: 16px;
+  padding: 1px 0;
 }
 
-.control-checkbox {
-  display: block;
+.control-input-infrastructure {
   width: 20px;
   height: 20px;
   background-color: #ffffff;
   border-radius: 4px;
-  margin-right: 15px;
+  appearance: none;
+  margin: 0;
 }
 
-.control-input {
+.control-input-infrastructure:hover {
+  border: 2px solid red;
+}
+
+.control-input-infrastructure:checked {
+  background-image: url("../images/checked.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  padding-left: 5px;
+}
+
+.control-input-housing {
+  width: 20px;
+  height: 20px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  appearance: none;
+  margin: 0;
+  position: relative;
+}
+
+.control-input-housing:checked::after {
+  position: absolute;
+  content: "";
+  width: 10px;
+  height: 10px;
+  top: 25%;
+  left: 25%;
+  background-color: #3f5e72;
+  border-radius: 50%;
+}
+
+.control-input-housing {
+  appearance: none;
+}
+
+.control-input-cost {
   font-family: inherit;
   font-weight: 400;
   font-size: 18px;
   line-height: 23px;
   background-color: #f2f2f2;
+}
+
+.control-input-cost::-webkit-outer-spin-button,
+.control-input-cost::-webkit-inner-spin-button {
   appearance: none;
-  margin: 0;
 }
 
 .cost-min-max {
   display: flex;
   gap: 2px;
-  margin-bottom: 41px; /*Должно быть 44px, найти еще 3px высоты для flex*/
+  margin-bottom: 44px;
 }
+
 
 .control-cost {
   position: relative;
@@ -857,6 +898,7 @@ body {
   color: #000000;
   padding: 12px 20px;
   border: none;
+
 }
 
 .cost-text {
@@ -864,15 +906,17 @@ body {
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
-  color: rgba(0, 0, 0, 0.3);
+  color: #000000;
   position: absolute;
   top: 12px;
   right: 20px;
+  opacity: 0.3;
 }
 
 .cost-from {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
+  margin-right: 2px;
 }
 
 .cost-to {
