--- a/styles/styles.css
+++ b/styles/styles.css
@@ -550,6 +550,26 @@ body {
   border: none;
 }
 
+/*Из макета непонятно, введенный текст полужирный или нормал? Если полужирный, то .subscribe-field надо указать font-weight: 700; и раскомментировать
+
+.subscribe-field::placeholder {
+  font-weight: 400;
+  opacity: 0.6;
+  color: #000000;
+}*/
+
+.subscribe-field:hover {
+  background-color: #e6e6e6;
+}
+
+.subscribe-field:focus-visible {
+  background-color: #e6e6e6;
+}
+
+.subscribe-field:active {
+  outline: 2px solid #000000;
+}
+
 .subscribe-button {
   display: inline-block;
   font-family: inherit;
@@ -820,6 +840,19 @@ body {
   padding: 1px 0;
 }
 
+.control-element:hover {
+  opacity: 0.6;
+}
+
+
+.control-element:focus-visible { /*Нужно ли указывать состояние focus-visible, если оно такое же как сосотяние покоя?*/
+  opacity: 1;
+}
+
+.control-element:active {
+  opacity: 0.3;
+}
+
 .control-input-infrastructure {
   width: 20px;
   height: 20px;
@@ -829,15 +862,10 @@ body {
   margin: 0;
 }
 
-.control-input-infrastructure:hover {
-  border: 2px solid red;
-}
-
 .control-input-infrastructure:checked {
   background-image: url("../images/checked.svg");
   background-repeat: no-repeat;
-  background-position: center;
-  padding-left: 5px;
+  background-position: 4px 6px;
 }
 
 .control-input-housing {
@@ -873,6 +901,18 @@ body {
   background-color: #f2f2f2;
 }
 
+.control-input-cost:hover {
+  background-color: #e6e6e6;
+}
+
+.control-input-cost:focus-visible {
+  background-color: #e6e6e6;
+}
+
+.control-input-cost:active {
+  outline: 2px solid #000000;
+}
+
 .control-input-cost::-webkit-outer-spin-button,
 .control-input-cost::-webkit-inner-spin-button {
   appearance: none;
@@ -884,10 +924,10 @@ body {
   margin-bottom: 44px;
 }
 
-
 .control-cost {
   position: relative;
 }
+
 
 .cost-field {
   width: 143px;
@@ -943,17 +983,12 @@ body {
   height: 20px;
   background: #ffffff;
   border: none;
-  border-radius: 4px;
+  border-radius: 5px;
   cursor: pointer;
 }
 
-.range-toggle:hover,
-.range-toggle:focus-visible {
-  opacity: 0.6;
-}
-
 .range-toggle:active {
-  outline: 3px solid #000000;
+  outline: 3px solid #82b3d3;
 }
 
 .toggle-min {
@@ -1058,6 +1093,10 @@ body {
 
 .select-control:active {
   border-color: #3f5e72;
+}
+
+.select-control:disabled {
+  border-color: #68a2ca;
 }
 
 .button-show-list{
