--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1400,3 +1400,61 @@ body {
   color: #000000;
   background-color: #f2f2f2;
 }
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+.modal {
+  position: relative;
+  margin: auto;
+  margin-top: 80px; /*Изменить на 392px*/
+  padding: 64px 70px;
+  background-color: #ffffff;
+
+}
+
+.modal-search {
+  width: 577px;
+  border-radius: 30px;
+  outline: 1px solid red;
+}
+
+
+.modal-close-button {
+  position: absolute;
+  padding: 0;
+  top: 64px;
+  right: 52px;
+  width: 52px;
+  height: 52px;
+  background-color: #f2f2f2;
+  border: none;
+  border-radius: 50%;
+  background-image: url("../images/close.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+}
+
+
+.modal-title {
+  margin: 0;
+  margin-bottom: 64px;
+  font-family: inherit;
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 700;
+  color: #000000;
+  text-transform: uppercase;
+}
+
+.search-button {
+  width: 577px;
+}
