--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1405,10 +1405,9 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  display: flex;
   width: 100%;
-  height: 100%;
   background-color: rgba(255, 255, 255, 0.8);
+  /*display: none;*/
 }
 
 .modal {
@@ -1417,15 +1416,12 @@ body {
   margin-top: 80px; /*Изменить на 392px*/
   padding: 64px 70px;
   background-color: #ffffff;
-
 }
 
 .modal-search {
   width: 577px;
   border-radius: 30px;
-  outline: 1px solid red;
 }
-
 
 .modal-close-button {
   position: absolute;
@@ -1443,7 +1439,6 @@ body {
   cursor: pointer;
 }
 
-
 .modal-title {
   margin: 0;
   margin-bottom: 64px;
@@ -1455,6 +1450,138 @@ body {
   text-transform: uppercase;
 }
 
+.search-form-date {
+  display: flex;
+  margin-bottom: 4px;
+  align-items: center;
+}
+
+.date-label {
+  display: inline-block;
+  width: 137px;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  margin: 0;
+}
+
+.date-field {
+  width: 440px;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  border-radius: 4px;
+  background-color: #f2f2f2;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: none;
+}
+
+.error-message {
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  margin: 0;
+  margin-left: 157px;
+  margin-bottom: 23px;
+  color: #ff5757;
+}
+
+.success-message {
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  margin: 0;
+  margin-left: 157px;
+  margin-bottom: 23px;
+  color: #333333;
+}
+
+.search-form-number-blok {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 48px;
+}
+
+.search-form-number {
+  display: flex;
+  align-items: center;
+}
+
+.number-label {
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  margin: 0;
+  margin-right: 46px;
+}
+
+.number-field {
+  width: 31px;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  text-align: center;
+  background-color: #f2f2f2;
+  padding: 12px 10px;
+  box-sizing: border-box;
+  border: none;
+}
+
+.number-minus {
+  width: 40px;
+  height: 48px;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  background-color: #f2f2f2;
+  background-image: url("../images/minus.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 14px 10px;
+  box-sizing: border-box;
+  border: none;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+.number-plus {
+  width: 40px;
+  height: 48px;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  background-color: #f2f2f2;
+  background-image: url("../images/plus.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 14px 10px;
+  box-sizing: border-box;
+  border: none;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
 .search-button {
+  display: inline-block;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
+  color: #ffffff;
+  background-color: #82b3d3;
+  border: 0;
+  border-radius: 4px;
+  text-transform: uppercase;
   width: 577px;
+  padding: 8px;
+  cursor: pointer;
 }
