:heavy_check_mark: Сборка #10

--- a/10/styles/styles.css
+++ b/10/styles/styles.css
@@ -550,6 +550,26 @@ body {
   border: none;
 }
 
+/*Из макета непонятно, введенный текст полужирный или нормал? Если полужирный, то .subscribe-field надо указать font-weight: 700; и раскомментировать
+
+.subscribe-field::placeholder {
+  font-weight: 400;
+  opacity: 0.6;
+  color: #000000;
+}*/
+
+.subscribe-field:hover {
+  background-color: #e6e6e6;
+}
+
+.subscribe-field:focus-visible {
+  background-color: #e6e6e6;
+}
+
+.subscribe-field:active {
+  outline: 2px solid #000000;
+}
+
 .subscribe-button {
   display: inline-block;
   font-family: inherit;
@@ -780,6 +800,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 70px;
+  min-height: 160px;
 }
 
 .catalog-filter-group {
@@ -791,12 +812,6 @@ body {
 
 .housing-type {
   margin-right: auto;
-}
-
-.cost {
-  display: flex;
-  flex-wrap: wrap;
-  min-width: 288px;
 }
 
 .catalog-filter-title {
@@ -819,18 +834,100 @@ body {
   margin-bottom: 16px;
 }
 
-.control-input {
+.control-element {
+  display: flex;
+  gap: 16px;
+  padding: 1px 0;
+}
+
+.control-element:hover {
+  opacity: 0.6;
+}
+
+
+.control-element:focus-visible { /*Нужно ли указывать состояние focus-visible, если оно такое же как сосотяние покоя?*/
+  opacity: 1;
+}
+
+.control-element:active {
+  opacity: 0.3;
+}
+
+.control-input-infrastructure {
+  width: 20px;
+  height: 20px;
+  background-color: #ffffff;
+  border-radius: 4px;
+  appearance: none;
+  margin: 0;
+}
+
+.control-input-infrastructure:checked {
+  background-image: url("../images/checked.svg");
+  background-repeat: no-repeat;
+  background-position: 4px 6px;
+}
+
+.control-input-housing {
+  width: 20px;
+  height: 20px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  appearance: none;
+  margin: 0;
+  position: relative;
+}
+
+.control-input-housing:checked::after {
+  position: absolute;
+  content: "";
+  width: 10px;
+  height: 10px;
+  top: 25%;
+  left: 25%;
+  background-color: #3f5e72;
+  border-radius: 50%;
+}
+
+.control-input-housing {
+  appearance: none;
+}
+
+.control-input-cost {
   font-family: inherit;
   font-weight: 400;
   font-size: 18px;
   line-height: 23px;
   background-color: #f2f2f2;
+}
+
+.control-input-cost:hover {
+  background-color: #e6e6e6;
+}
+
+.control-input-cost:focus-visible {
+  background-color: #e6e6e6;
+}
+
+.control-input-cost:active {
+  outline: 2px solid #000000;
+}
+
+.control-input-cost::-webkit-outer-spin-button,
+.control-input-cost::-webkit-inner-spin-button {
   appearance: none;
+}
+
+.cost-min-max {
+  display: flex;
+  gap: 2px;
+  margin-bottom: 44px;
 }
 
 .control-cost {
   position: relative;
 }
+
 
 .cost-field {
   width: 143px;
@@ -867,13 +964,49 @@ body {
   border-bottom-right-radius: 4px;
 }
 
+.range-scale {
+  position: relative;
+  height: 4px;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.range-bar {
+  position: absolute;
+  height: 4px;
+  background-color: #ffffff;
+}
+
+.range-toggle {
+  position: absolute;
+  bottom: -8px;
+  width: 20px;
+  height: 20px;
+  background: #ffffff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.range-toggle:active {
+  outline: 3px solid #82b3d3;
+}
+
+.toggle-min {
+  top: -8px;
+  left: 0;
+}
+
+.toggle-max {
+  top: -8px;
+  right: 0;
+}
+
 .filter-buttons {
   width: 191px;
   align-self: end;
 }
 
 .filter-button {
-  display: inline-block;
   width: 191px;
   font-family: inherit;
   font-weight: 700;
@@ -890,7 +1023,7 @@ body {
 
 .apply {
   background-color: #82b3d3;
-  margin-bottom: 32px;
+  margin-bottom: 30px; /*по макету 32px*/
 }
 
 .apply:hover {
@@ -960,6 +1093,10 @@ body {
 
 .select-control:active {
   border-color: #3f5e72;
+}
+
+.select-control:disabled {
+  border-color: #68a2ca;
 }
 
 .button-show-list{
@@ -1262,4 +1399,189 @@ body {
 .pagination-current:active {
   color: #000000;
   background-color: #f2f2f2;
+}
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+  /*display: none;*/
+}
+
+.modal {
+  position: relative;
+  margin: auto;
+  margin-top: 80px; /*Изменить на 392px*/
+  padding: 64px 70px;
+  background-color: #ffffff;
+}
+
+.modal-search {
+  width: 577px;
+  border-radius: 30px;
+}
+
+.modal-close-button {
+  position: absolute;
+  padding: 0;
+  top: 64px;
+  right: 52px;
+  width: 52px;
+  height: 52px;
+  background-color: #f2f2f2;
+  border: none;
+  border-radius: 50%;
+  background-image: url("../images/close.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+}
+
+.modal-title {
+  margin: 0;
+  margin-bottom: 64px;
+  font-family: inherit;
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 700;
+  color: #000000;
+  text-transform: uppercase;
+}
+
+.search-form-date {
+  display: flex;
+  margin-bottom: 4px;
+  align-items: center;
+}
+
+.date-label {
+  display: inline-block;
+  width: 137px;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  margin: 0;
+}
+
+.date-field {
+  width: 440px;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  border-radius: 4px;
+  background-color: #f2f2f2;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: none;
+}
+
+.error-message {
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  margin: 0;
+  margin-left: 157px;
+  margin-bottom: 23px;
+  color: #ff5757;
+}
+
+.success-message {
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  margin: 0;
+  margin-left: 157px;
+  margin-bottom: 23px;
+  color: #333333;
+}
+
+.search-form-number-blok {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 48px;
+}
+
+.search-form-number {
+  display: flex;
+  align-items: center;
+}
+
+.number-label {
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  margin: 0;
+  margin-right: 46px;
+}
+
+.number-field {
+  width: 31px;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  text-align: center;
+  background-color: #f2f2f2;
+  padding: 12px 10px;
+  box-sizing: border-box;
+  border: none;
+}
+
+.number-minus {
+  width: 40px;
+  height: 48px;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  background-color: #f2f2f2;
+  background-image: url("../images/minus.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 14px 10px;
+  box-sizing: border-box;
+  border: none;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+.number-plus {
+  width: 40px;
+  height: 48px;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  background-color: #f2f2f2;
+  background-image: url("../images/plus.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 14px 10px;
+  box-sizing: border-box;
+  border: none;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.search-button {
+  display: inline-block;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
+  color: #ffffff;
+  background-color: #82b3d3;
+  border: 0;
+  border-radius: 4px;
+  text-transform: uppercase;
+  width: 577px;
+  padding: 8px;
+  cursor: pointer;
 }
