:heavy_check_mark: Сборка #10

--- a/10/styles/styles.css
+++ b/10/styles/styles.css
@@ -1413,7 +1413,7 @@ body {
 .modal {
   position: relative;
   margin: auto;
-  margin-top: 80px; /*Изменить на 392px*/
+  margin-top: 392px;
   padding: 64px 70px;
   background-color: #ffffff;
 }
