--- a/styles/styles.css
+++ b/styles/styles.css
@@ -550,14 +550,6 @@ body {
   border: none;
 }
 
-/*Из макета непонятно, введенный текст полужирный или нормал? Если полужирный, то .subscribe-field надо указать font-weight: 700; и раскомментировать
-
-.subscribe-field::placeholder {
-  font-weight: 400;
-  opacity: 0.6;
-  color: #000000;
-}*/
-
 .subscribe-field:hover {
   background-color: #e6e6e6;
 }
@@ -858,6 +850,8 @@ body {
   height: 20px;
   background-color: #ffffff;
   border-radius: 4px;
+  -moz-appearance: none;
+  -webkit-appearance: none;
   appearance: none;
   margin: 0;
 }
@@ -873,6 +867,8 @@ body {
   height: 20px;
   background-color: #ffffff;
   border-radius: 50%;
+  -moz-appearance: none;
+  -webkit-appearance: none;
   appearance: none;
   margin: 0;
   position: relative;
@@ -899,6 +895,7 @@ body {
   font-size: 18px;
   line-height: 23px;
   background-color: #f2f2f2;
+  -moz-appearance: textfield;
 }
 
 .control-input-cost:hover {
@@ -938,7 +935,6 @@ body {
   color: #000000;
   padding: 12px 20px;
   border: none;
-
 }
 
 .cost-text {
@@ -985,6 +981,12 @@ body {
   border: none;
   border-radius: 5px;
   cursor: pointer;
+}
+
+.range-toggle:focus-visible {
+  -moz-background: red;
+  -webkit-outline: 3px solid green;
+  outline: 2px solid blue;;
 }
 
 .range-toggle:active {
@@ -1081,6 +1083,7 @@ body {
   border: 2px solid #e5e5e5;
   border-radius: 4px;
   cursor: pointer;
+  -moz-appearance: none;
   appearance: none;
   background-image: url("../images/products/down-arrow.svg");
   background-repeat: no-repeat;
@@ -1405,22 +1408,26 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
   width: 100%;
-  background-color: rgba(255, 255, 255, 0.8);
-  /*display: none;*/
+  height: 100%;
+  background-color: rgba(242, 242, 242, 0.8);
+  z-index: 10;
+}
+
+.modal-close {
+  display: none;
 }
 
 .modal {
   position: relative;
   margin: auto;
-  margin-top: 396px;
   padding: 64px 70px;
   background-color: #ffffff;
-}
-
-.modal-search {
   width: 577px;
   border-radius: 30px;
+  box-shadow: 0px 25px 50px 0px rgba(0, 0, 0, 0.15);
 }
 
 .modal-close-button {
@@ -1458,25 +1465,48 @@ body {
 
 .date-label {
   display: inline-block;
-  width: 137px;
+  width: 127px;
+  padding-right: 10px;
   font-family: inherit;
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
   margin: 0;
+  word-break: break-all;
 }
 
 .date-field {
-  width: 440px;
+  width: 380px;
   font-family: inherit;
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
-  border-radius: 4px;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  color: #000000;
   background-color: #f2f2f2;
   padding: 12px 20px;
   box-sizing: border-box;
   border: none;
+}
+
+.date-search {
+  width: 60px;
+  height: 48px;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  background-color: #f2f2f2;
+  background-image: url("../images/date.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 14px 20px;
+  box-sizing: border-box;
+  border: none;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  position: relative;
 }
 
 .error-message {
@@ -1503,8 +1533,10 @@ body {
 
 .search-form-number-blok {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   margin-bottom: 48px;
+  gap: 4px;
 }
 
 .search-form-number {
@@ -1518,7 +1550,86 @@ body {
   font-size: 20px;
   line-height: 24px;
   margin: 0;
-  margin-right: 46px;
+  word-break: break-all;
+  padding-right: 10px;
+}
+
+.number-label-adult {
+  width: 127px;
+}
+
+.number-label-children {
+  width: 132px;
+  display: flex;
+}
+
+.tooltip {
+  position: relative;
+  margin-top: 1px;
+  width: 26px;
+  height: 26px;
+}
+
+.tooltip-toggle {
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  margin: 0;
+  display: block;
+}
+
+.tooltip-icon {
+  width: 100%;
+  height: 100%;
+  display: block;
+  fill: #83b3d3;
+}
+
+.form-label-icon {
+  position: relative;
+  padding-right: 16px;
+}
+
+.tooltip-toggle:hover .tooltip-icon {
+  opacity: 0.6;
+}
+
+.tooltip-text {
+  background-color: #333333;
+  color: #ffffff;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: none;
+  padding: 15px 18px 18px 22px;
+  border-radius: 10px;
+  display: block;
+  width: 216px;
+  position: absolute;
+  top: 100%;
+  margin-top: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+  display: none;
+}
+
+.tooltip-text:after {
+  content:'';
+  background-image: url("../images/tooltip-arrow.svg");
+  width: 19px;
+  height: 9px;
+  position:absolute;
+  bottom: 100%;
+  left:0;
+  right:0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.tooltip-toggle:hover + .tooltip-text,
+.tooltip-toggle:focus + .tooltip-text {
+  display: block;
 }
 
 .number-field {
@@ -1529,9 +1640,15 @@ body {
   line-height: 24px;
   text-align: center;
   background-color: #f2f2f2;
-  padding: 12px 10px;
+  padding: 12px 3px;
   box-sizing: border-box;
   border: none;
+  appearance: textfield;
+}
+
+.number-field::-webkit-outer-spin-button,
+.number-field::-webkit-inner-spin-button {
+  appearance: none;
 }
 
 .number-minus {
@@ -1550,6 +1667,7 @@ body {
   border: none;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
+
 }
 
 .number-plus {
