--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1568,6 +1568,9 @@ body {
   margin-top: 1px;
   width: 26px;
   height: 26px;
+  flex-shrink: 0;
+
+
 }
 
 .tooltip-toggle {
@@ -1576,6 +1579,7 @@ body {
   padding: 0;
   margin: 0;
   display: block;
+
 }
 
 .tooltip-icon {
